2011-04-01  Bruno Haible  <bruno@clisp.org>

	wcpcpy, wcpncpy: Ensure declaration on glibc >= 2.13 systems.
	* m4/wcpcpy.m4 (gl_FUNC_WCPCPY): Require AC_USE_SYSTEM_EXTENSIONS.
	* m4/wcpncpy.m4 (gl_FUNC_WCPNCPY): Likewise.
	* modules/wcpcpy (Depends-on): Add extensions.
	* modules/wcpncpy (Depends-on): Likewise.
	* doc/posix-functions/wcpcpy.texi: Mention missing declaration on glibc
	systems.
	* doc/posix-functions/wcpncpy.texi: Likewise.
	* doc/posix-functions/wcwidth.texi: Likewise.

2011-03-31  Eric Blake  <eblake@redhat.com>

	nonblocking: fix mingw test failures
	* lib/nonblocking.c (set_nonblocking_flag): Succeed when clearing
	non-blocking flag on regular file.
	(get_nonblocking_flag): Set errno on invalid fd.
	* tests/test-nonblocking.c (main): Avoid test failure on
	directories if fchdir is not active.
	* modules/nonblocking-tests (Depends-on): Drop unused dependency.

2011-03-31  Bruno Haible  <bruno@clisp.org>

	Fix bug with gl_WARN_ON_USE_PREPARE, introduced on 2011-01-23.
	* m4/gnulib-common.m4 (gl_ASSERT_NO_GNULIB_POSIXCHECK): Hide the
	gl_WARN_ON_USE_PREPARE definition from 'aclocal'.
	Reported by Simon Josefsson <simon@josefsson.org>.

2011-03-31  Bruno Haible  <bruno@clisp.org>
	and Eric Blake  <eblake@redhat.com>

	nonblocking: new module
	* modules/nonblocking: New module.
	* modules/nonblocking-tests: Likewise.
	* lib/nonblocking.h: New file.
	* lib/nonblocking.c: Likewise.
	* tests/test-nonblocking.c: New test.
	* lib/ioctl.c (ioctl) [mingw]: Update comment.

2011-03-30  Bruno Haible  <bruno@clisp.org>

	stdio: Avoid GCC >= 4.4 warnings when using %lld and similar on mingw.
	* lib/stdio.in.h (_GL_ATTRIBUTE_FORMAT_PRINTF): Use 'gnu_printf' format
	instead of 'printf' format for GCC >= 4.4.
	(_GL_ATTRIBUTE_FORMAT_PRINTF_SYSTEM): New macro.
	(fprintf, printf, vfprintf, vprintf): Declare with
	_GL_ATTRIBUTE_FORMAT_PRINTF_SYSTEM when the function ends up calling
	the system's vfprintf() function.